--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="motor.css">
+    <link rel="stylesheet" href="../ttt/css/motor.css">
     <link rel="shortcut icon" href="img_impresa/logo_do_tcc-removebg-preview.png" type="image/png">
     <title>TCC</title>
 </head>
